@@ -1,6 +1,9 @@
 Release history for Dist-Zilla-Plugin-Author-KENTNL-RecommendFixes
 
 {{$NEXT}}
+ [Checks]
+ - Make sure weaver_ini_ok runs
+ - Double-check that -Encoding is not specified.
 
 0.003005 2014-09-25T16:09:00Z
  [Dependencies::Stats]
